--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- TailwindCSS 3.0+ CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Framer Motion CDN -->
+  <script src="questions.js"></script>
   <script src="https://unpkg.com/framer-motion/dist/framer-motion.umd.js"></script>
   <!-- Material Icons CDN -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -224,14 +225,10 @@
     let allQuestions = [];
     let filteredQuestions = [];
 
-    // 读取本地JSON（需本地服务器环境）
-    fetch('错题库.json')
-      .then(res => res.json())
-      .then(data => {
-        allQuestions = data;
-        populateFilters();
-        filterAndRenderQuestions();
-      });
+    // 直接使用 questions.js 中的变量
+    allQuestions = questions;
+    populateFilters();
+    filterAndRenderQuestions();
 
     function populateFilters() {
       const subjectFilter = document.getElementById('subject-filter');
