fix: 将最小错误次数默认选项从"0"改为"所有"
修改选择框的默认选项文本，使其更清晰地表达"所有"的含义

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="mb-6">
         <label for="min-error-filter" class="block text-gray-700 text-sm font-bold mb-2">最小错误次数 <span class="en">Min Errors</span></label>
         <select id="min-error-filter" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
-          <option value="0">0</option>
+          <option value="0">所有 <span class="en">All</span></option>
         </select>
       </div>
       <div class="mb-6">
