--- a/index.html
+++ b/index.html
@@ -116,6 +116,38 @@
         margin-left: 280px;
       }
     }
+
+    /* Scroll to top/bottom buttons */
+    .scroll-button {
+      position: fixed;
+      right: 10px;
+      width: 40px; /* 减小尺寸 */
+      height: 30px; /* 减小尺寸 */
+      background-color: rgb(255, 255, 255); /* 更暗的颜色，更高透明度 */
+      color: rgb(192, 192, 192);
+      border-radius: 6px; /* 圆角矩形 */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 20px; /* 调整图标大小 */
+      cursor: pointer;
+      transition: background-color 0.1s, transform 0.1s;
+      z-index: 1000;
+    }
+
+    .scroll-button:hover {
+      background-color: #e73f3fda; /* 悬停时颜色更深 */
+      color: rgb(255, 255, 255);
+      transform: scale(1.1);
+    }
+
+    #scroll-to-top {
+      bottom: 70px;
+    }
+
+    #scroll-to-bottom {
+      bottom: 30px;
+    }
   </style>
 </head>
 <body>
@@ -177,6 +209,10 @@
       <div id="question-container"></div>
     </main>
   </div>
+
+  <!-- Scroll to Top/Bottom Buttons -->
+  <div id="scroll-to-top" class="scroll-button material-icons">keyboard_arrow_up</div>
+  <div id="scroll-to-bottom" class="scroll-button material-icons">keyboard_arrow_down</div>
 
   <script>
     // Apple官网风格滚动动效
@@ -373,6 +409,15 @@
     if (window.innerWidth >= 1024) {
       sidebar.classList.add('open');
     }
+
+    // Scroll to top/bottom functionality
+    document.getElementById('scroll-to-top').addEventListener('click', () => {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+
+    document.getElementById('scroll-to-bottom').addEventListener('click', () => {
+      window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
+    });
   </script>
 </body>
 </html>
