feat: 添加文本总结练习功能及相关文件
新增文本总结练习按钮及页面功能，包括：
1. 在index.html中添加练习按钮和点击事件
2. 创建TextExe.js存储练习数据
3. 新增text-summary-exercise.html练习页面
4. 删除不再使用的k.md文件

--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
   </div>
 
   <!-- Random Quiz Button -->
+  <div id="text-summary-exercise-button" class="scroll-button material-icons" style="bottom: 150px;">description</div>
   <div id="random-quiz-button" class="scroll-button material-icons">casino</div>
 
   <!-- Scroll to Top/Bottom Buttons -->
@@ -493,6 +494,11 @@
     
     // 渲染随机题目
     renderQuestions(random10);
+    });
+
+    // 新增文本总结练习按钮的点击事件监听器
+    document.getElementById('text-summary-exercise-button').addEventListener('click', function() {
+      window.location.href = 'text-summary-exercise.html';
     });
 
     // 新增骰子按钮的点击事件监听器
