style: 调整头部样式间距和图标位置

--- a/text-summary-exercise.html
+++ b/text-summary-exercise.html
@@ -268,9 +268,9 @@
   </style>
 </head>
 <body>
-  <header id="header" class="apple-scroll fixed top-0 left-0 w-full z-30 py-4 px- flex items-center justify-between">
+  <header id="header" class="apple-scroll fixed top-0 left-0 w-full z-30 py-3 px- flex items-center justify-between">
     <div class="flex items-center">
-      <span class="material-icons highlight mr-2">text_fields</span>
+      <span class="material-icons ml-2 highlight mr-2">text_fields</span>
       <span class="zh">文本总结练习</span>
 
     </div>
