--- a/text-summary-exercise.html
+++ b/text-summary-exercise.html
@@ -8,6 +8,14 @@
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <!-- TailwindCSS 3.0+ CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {}
+      }
+    }
+  </script>
   <!-- Framer Motion CDN -->
   <script src="https://unpkg.com/framer-motion/dist/framer-motion.umd.js"></script>
   <!-- Material Icons CDN -->
@@ -280,7 +288,7 @@
     </div>
   </header>
 
-  <!-- 筛选容器 -->
+   <!-- 筛选容器 -->
   <div class="container mx-auto px-4 pt-20 pb-4 max-w-4xl">
     <div class="filter-container flex flex-wrap justify-between items-center bg-white dark:bg-gray-800 p-4 rounded-lg shadow-sm mb-4">
       <div class="filter-item w-full md:w-1/3 px-2 mb-3 md:mb-0">
@@ -669,6 +677,9 @@
         darkModeToggle.textContent = 'light_mode';
         localStorage.setItem('darkMode', 'enabled');
       }
+      
+      // 强制重新渲染筛选容器和题目卡片，确保暗黑模式样式被正确应用
+      renderCurrentExercise();
     });
 
     // 初始化加载
