--- a/text-summary-exercise.html
+++ b/text-summary-exercise.html
@@ -156,6 +156,30 @@
       background: #3a3a3a;
       color: #eee;
     }
+    body.dark-mode .bg-gray-100 {
+      background-color: #374151;
+    }
+    body.dark-mode .bg-gray-200 {
+      background-color: #4b5563;
+    }
+    body.dark-mode .bg-gray-700 {
+      background-color: #374151;
+    }
+    body.dark-mode .bg-gray-800 {
+      background-color: #1f2937;
+    }
+    body.dark-mode .text-gray-300 {
+      color: #d1d5db;
+    }
+    body.dark-mode .text-gray-700 {
+      color: #d1d5db;
+    }
+    body.dark-mode .border-gray-300 {
+      border-color: #4b5563;
+    }
+    body.dark-mode .shadow-sm {
+      box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
+    }
     .correct {
       color: #16a34a;
     }
@@ -290,30 +314,25 @@
 
    <!-- 筛选容器 -->
   <div class="container mx-auto px-4 pt-20 pb-4 max-w-4xl">
-    <div class="filter-container flex flex-wrap justify-between items-center bg-white dark:bg-gray-800 p-4 rounded-lg shadow-sm mb-4">
+    <div class="filter-container flex flex-wrap justify-between items-center p-4 rounded-lg shadow-sm mb-4" style="border: 2px solid #ccb89b14">
       <div class="filter-item w-full md:w-1/3 px-2 mb-3 md:mb-0">
-        <label class="block text-gray-700 dark:text-gray-300 text-sm font-bold mb-2">学科筛选</label>
-        <select id="subject-filter" class="w-full p-2 border rounded-md bg-white dark:bg-gray-700 dark:text-white">
-          <option value="all">全部学科</option>
+        <select id="subject-filter" class="w-full p-2 border rounded-md dark:bg-gray-700 text-gray-800 ">
+          <option value="all">学科筛选</option>
           <!-- 动态生成学科选项 -->
         </select>
       </div>
       <div class="filter-item w-full md:w-1/3 px-2 mb-3 md:mb-0">
-        <label class="block text-gray-700 dark:text-gray-300 text-sm font-bold mb-2">错误次数筛选</label>
-        <select id="error-filter" class="w-full p-2 border rounded-md bg-white dark:bg-gray-700 dark:text-white">
-          <option value="all">全部</option>
+        <select id="error-filter" class="w-full p-2 border rounded-md bg-white dark:bg-gray-700 text-gray-800 dark:text-white">
+          <option value="all">错误次数筛选</option>
           <!-- 动态生成错误次数选项 -->
         </select>
       </div>
       <div class="filter-item w-full md:w-1/3 px-2 mb-3 md:mb-0 flex flex-col">
-        <label class="block text-gray-700 dark:text-gray-300 text-sm font-bold mb-2">重置</label>
         <div class="flex space-x-2">
-          <button id="reset-filter" class="flex-1 bg-gray-200 hover:bg-gray-300 dark:bg-gray-600 dark:hover:bg-gray-500 text-gray-800 dark:text-white font-medium py-2 px-4 rounded-md transition duration-200">
+          <button id="reset-filter" class="flex-1 bg-gray-200 hover:bg-gray-300 dark:bg-gray-500 dark:hover:bg-gray-500 text-gray-800 dark:text-white font-medium py-2 px-4 rounded-md transition duration-200">
             <i class="fas fa-filter-circle-xmark mr-1"></i>重置筛选
           </button>
-          <button id="reset-exercises" class="flex-1 bg-gray-200 hover:bg-gray-300 dark:bg-gray-600 dark:hover:bg-gray-500 text-gray-800 dark:text-white font-medium py-2 px-4 rounded-md transition duration-200">
-            <i class="fas fa-rotate mr-1"></i>重新答题
-          </button>
+          <!-- 删除重新答题按钮 -->
         </div>
       </div>
     </div>
@@ -370,7 +389,8 @@
       
       // 添加重置按钮事件监听器
       document.getElementById('reset-filter').addEventListener('click', resetFilters);
-      document.getElementById('reset-exercises').addEventListener('click', resetExercises);
+      // 删除重置练习的事件监听器
+
     }
     
     // 应用筛选条件
@@ -615,6 +635,7 @@
     }
 
     // 重置练习
+    // 删除整个resetExercises函数
     function resetExercises() {
       currentExerciseIndex = 0;
       completedExercises = 0;
