fix: 修正题目编号显示并更新答案和科目字段
将题目编号从"题目 ${index + 1}"改为显示实际题号"题${exercise.txt_id}"
更新TextExe.js中部分答案内容和修正科目字段的空格问题

--- a/text-summary-exercise.html
+++ b/text-summary-exercise.html
@@ -474,7 +474,7 @@
           <div class="exercise-card p-8 mb-6 fade-in" id="exercise-${index}">
             <div class="flex items-center justify-between mb-2">
               <div>
-                <span class="zh">题目 ${index + 1}/${filteredExercises.length}</span>
+                <span class="zh">题${exercise.txt_id}</span>
               </div>
               <div class="flex items-center">
                 <span class="badge bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-xs mr-2">${exercise.subject}</span>
