--- a/text-summary-exercise.html
+++ b/text-summary-exercise.html
@@ -331,7 +331,7 @@
       <div class="filter-item w-full md:w-1/3 px-2 mb-3 md:mb-0 flex flex-col">
         <div class="flex space-x-2">
           <button id="reset-filter" class="flex-1 bg-gray-200 hover:bg-gray-300 dark:bg-gray-500 dark:hover:bg-gray-500 text-gray-800 dark:text-white font-medium py-2 px-4 rounded-md transition duration-200">
-            <i class="fas fa-filter-circle-xmark mr-1"></i>重置
+            <i class="fas fa-filter-circle-xmark mr-1"></i>重置筛选
           </button>
           <!-- 删除重新答题按钮 -->
         </div>
