--- a/index.html
+++ b/index.html
@@ -290,19 +290,24 @@
     <!-- Main Content -->
     <main class="main-content flex-1 pb-12 px-4 w-full mx-auto lg:ml-80 mt-10"> 
       <!-- 新增顶部筛选栏 -->
-      <div class="flex justify-between items-center mb-6 mt-4 ml-4 mr-3"> 
+      <div class="flex justify-between items-center mb-6 mt-4 ml-4 mr-2"> 
         <div class="flex-1 mr-4">
-          <label for="top-subject-filter" class="block text-gray-700 text-sm font-bold mb-2">科目</label>
-          <select id="top-subject-filter" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
+          <label for="top-subject-filter" class="block text-gray text-sm font-bold mb-2">科目</label>
+           <select id="top-subject-filter" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
             <option value="all">所有科目</option>
           </select>
         </div>
-        <div class="flex-1">
-          <label for="top-error-filter" class="block text-gray-700 text-sm font-bold mb-2">错误次数</label>
-          <select id="top-error-filter" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
+        <div class="flex-1 mr-4">
+          <label for="top-error-filter" class="block text-gray text-sm font-bold mb-2">错误次数</label>
+          <select id="top-error-filter" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
             <option value="0">所有</option>
           </select>
         </div>
+        <div class="flex-0.5 text-right">
+        <button id="top-reset-filter" class="mt-7 bg-gray-200 hover:bg-gray-200 text-gray-700 px-4 py-3 rounded font-medium">
+          🔁
+        </button>
+      </div>
       </div>
 
       <div id="question-container"></div>
@@ -385,6 +390,18 @@
       }
     });
 
+    document.getElementById('top-reset-filter').addEventListener('click', () => {
+      // 重置顶部筛选
+      document.getElementById('top-subject-filter').value = 'all';
+      document.getElementById('top-error-filter').value = '0';
+      
+      // 重置侧边栏筛选（如果需要）
+      // document.getElementById('subject-filter').value = 'all';
+      // document.getElementById('min-error-filter').value = '0';
+      
+      // 重新筛选
+      filterAndRenderQuestions();
+    });
     // Adjust main content and header margin on resize for desktop view
     window.addEventListener('resize', () => {
       if (window.innerWidth >= 1024) {
