--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@
       <div class="flex justify-between items-center mb-6 mt-4 ml-4 mr-2"> 
         <div class="flex-1 mr-4">
           <label for="top-subject-filter" class="block text-gray text-sm font-bold mb-2">科目</label>
-           <select id="top-subject-filter" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
+           <select id="top-subject-filter" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
             <option value="all">所有科目</option>
           </select>
         </div>
         <div class="flex-1 mr-4">
           <label for="top-error-filter" class="block text-gray text-sm font-bold mb-2">错误次数</label>
-          <select id="top-error-filter" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
+          <select id="top-error-filter" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
             <option value="0">所有</option>
           </select>
         </div>
